WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215137
[iOS] Keyboard shortcuts and arrow key scrolling stop working after navigating via swipe gesture
https://bugs.webkit.org/show_bug.cgi?id=215137
Summary
[iOS] Keyboard shortcuts and arrow key scrolling stop working after navigatin...
Wenson Hsieh
Reported
2020-08-04 14:35:19 PDT
<
rdar://problem/65082979
>
Attachments
Patch
(14.93 KB, patch)
2020-08-04 17:37 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-08-04 17:37:55 PDT
Created
attachment 405968
[details]
Patch
Tim Horton
Comment 2
2020-08-04 23:35:45 PDT
Comment on
attachment 405968
[details]
Patch Seems a /bit/ like a workaround for something that UIKit should be doing for us? But OK.
Wenson Hsieh
Comment 3
2020-08-05 07:36:40 PDT
(In reply to Tim Horton from
comment #2
)
> Comment on
attachment 405968
[details]
> Patch > > Seems a /bit/ like a workaround for something that UIKit should be doing for > us? But OK.
Perhaps! Though, I suspect it might break some clients/apps if they started restoring first responder after all interactive transitions.
Wenson Hsieh
Comment 4
2020-08-05 07:36:55 PDT
Comment hidden (obsolete)
Comment on
attachment 405968
[details]
Patch Perhaps!
EWS
Comment 5
2020-08-05 07:43:55 PDT
Committed
r265284
: <
https://trac.webkit.org/changeset/265284
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405968
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug